--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Ashley Spellman</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
 </head>
 <body>
 
@@ -23,15 +24,30 @@
 <section class="container">
 	
 	<article class="box1">
+		<h1>About Me</h1>
+		<hr>
+		<img src="assets/images/me.jpg" alt="Ashley Spellman" id="profile-pic">
+		<p>Iipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		
 	</article>
 
 	<aside class="box2">
-		
+		<h1>Connect with Me</h1>
+		<hr>
+		<a href="#"><img src="assets/images/github.png" alt="github" class="icon"></a>
+		<a href="#"><img src="assets/images/stackoverflow.png" alt="github" class="icon"></a>
+		<a href="#"><img src="assets/images/linkedin.png" alt="github" class="icon"></a>
 	</aside>
 </section>
 
-<footer></footer>
+<footer>
+	<p>&copy 2017 Ashley Spellman</p>
+</footer>
 
 </body>
 </html>
