--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
 <header>
-	<h1 class="headbox">
+	<a href="index.html"><h1 class="headbox">
 		Ashley Spellman
-	</h1>
+	</h1></a>
 
 	<ul class="nav">
 		<li><a href="index.html">About</a></li>
-		<li><a href="#">Portfolio</a></li>
-		<li><a href="#">Contact</a></li>
+		<li><a href="portfolio.html">Portfolio</a></li>
+		<li><a href="contact.html">Contact</a></li>
 	</ul>
 	
 
@@ -27,7 +27,7 @@
 		<h1>About Me</h1>
 		<hr>
 		<img src="assets/images/me.jpg" alt="Ashley Spellman" id="profile-pic">
-		<p>Iipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="bio">Iipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
