--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,16 @@
 		<hr>
 		<table>
 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"></a>
-				<td><a href="#"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"></a>
+				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><span><h2>Hangman</h2></span></a></td>
+				<td><a href="#"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"></a></td>
 			</tr>
 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"></a>
-				<td><a href="#"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"></a>
+				<td><a href="#"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"></a></td>
+				<td><a href="#"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"></a></td>
 			</tr>
 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"></a>
-				<td><a href="#"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a>
+				<td><a href="#"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"></a></td>
+				<td><a href="#"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a></td>
 			</tr>
 <!-- 			<tr>
 				<td><a href="#"><img src="assets/images/portfolio7.jpg" alt="Portfolio Image 7" class="portfolio-pic"></a>
