Small changes from Wed/Thurs

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ashley Spellman</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
 </head>
@@ -26,12 +27,12 @@
 	<article class="box1">
 		<h1>Contact</h1>
 		<form>
-			<p class="form-font">Name</p><!-- <br> -->
-			<input class="contact form-font" type="text" placeholder="John Smith"><br><br>
-			<p class="form-font">Email</p><!-- <br> -->
-			<input class="contact form-font" type="email" placeholder="example@gmail.com"><br><br>
-			<p class="form-font">Message</p><!-- <br> -->
-			<textarea rows="20" cols="50" class="form-font"></textarea><br><br>
+			<p class="form-font">Name</p>
+			<input class="contact form-font" type="text" placeholder="John Smith"><br>
+			<p class="form-font">Email</p>
+			<input class="contact form-font" type="email" placeholder="example@gmail.com"><br>
+			<p class="form-font">Message</p>
+			<textarea rows="15" cols="40" class="form-font"></textarea><br><br>
 			<button class="form-font" type="submit">Submit</button>
 		</form>
 		
