--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ashley Spellman</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
 </head>
@@ -28,7 +29,7 @@
 		<hr>
 		<table>
 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><span><h2>Hangman</h2></span></a></td>
+				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><!-- <span><h2>Hangman</h2></span> --></a><h2>Hangman</h2></td>
 				<td><a href="#"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"></a></td>
 			</tr>
 			<tr>
