Friday Night Updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <header>
 	<a href="index.html"><h1 class="headbox">
 		Ashley Spellman
@@ -21,6 +23,7 @@
 	
 
 </header>
+
 
 <section class="container">
 	
@@ -50,5 +53,6 @@
 	<p>&copy 2017 Ashley Spellman</p>
 </footer>
 
+</div>
 </body>
 </html>
