--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <header>
 	<a href="index.html"><h1 class="headbox">
 		Ashley Spellman
@@ -24,12 +26,12 @@
 
 <section class="container">
 	
-	<article class="box1">
+<!-- 	<article class="box1">
 		<h1>Portfolio</h1>
 		<hr>
 		<table>
 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><!-- <span><h2>Hangman</h2></span> --></a><h2>Hangman</h2></td>
+				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><!-- <span><h2>Hangman</h2></span> --><!-- </a><h2>Hangman</h2></td>
 				<td><a href="#"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"></a></td>
 			</tr>
 			<tr>
@@ -38,16 +40,31 @@
 			</tr>
 			<tr>
 				<td><a href="#"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"></a></td>
-				<td><a href="#"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a></td>
-			</tr>
-<!-- 			<tr>
-				<td><a href="#"><img src="assets/images/portfolio7.jpg" alt="Portfolio Image 7" class="portfolio-pic"></a>
-			</tr> -->
+				<td><a href="#"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a></td> -->
+		<!-- 	</tr>
+
 
 		</table>
 		
 
-	</article>
+	</article> --> 
+
+	<div class="box1">
+
+	<h1>Portfolio</h1>
+	<hr>
+
+	<section class="portfolio-container">
+		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><p>Hangman</p></a>
+		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"><p>RPG Game</p></a>
+		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"><p>Trivia Game</p></a>
+		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"><p>Rutgers Info Widget</p></a>
+		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"><p>Rock Paper Scissors</p></a>
+		<!-- <a href="#" class="portfolio-pic"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a> -->
+	</section>
+
+	</div>
+
 
 	<aside class="box2">
 		<h1>Connect with Me</h1>
@@ -61,6 +78,8 @@
 <footer>
 	<p>&copy 2017 Ashley Spellman</p>
 </footer>
+
+</div>
 
 </body>
 </html>
