--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <header>
 	<a href="index.html"><h1 class="headbox">
 		Ashley Spellman
@@ -51,6 +53,8 @@
 <footer>
 	<p>&copy 2017 Ashley Spellman</p>
 </footer>
+
+</div>
 
 </body>
 </html>
