--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ashley Spellman</title>
-	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
-</head>
-<body>
+	<head>
+		<title>Ashley Spellman</title>
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
+	</head>
 
-<div class="content">
+	<body>
 
-<header>
-	<a href="index.html"><h1 class="headbox">
-		Ashley Spellman
-	</h1></a>
+		<div class="content">
 
-	<ul class="nav">
-		<li><a href="index.html">About</a></li>
-		<li><a href=portfolio.html>Portfolio</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
-	
+			<header>
+				<a href="index.html"><h1 class="headbox">
+					Ashley Spellman
+				</h1></a>
+				<ul class="nav">
+					<li><a href="index.html">About</a></li>
+					<li><a href=portfolio.html>Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</header>
 
-</header>
+			<section class="container">
+				
+				<article class="box1">
+					<h1>Contact</h1>
+					<form>
+						<p class="form-font">Name</p>
+						<input class="contact form-font" type="text" placeholder="John Smith"><br>
+						<p class="form-font">Email</p>
+						<input class="contact form-font" type="email" placeholder="example@gmail.com"><br>
+						<p class="form-font">Message</p>
+						<textarea rows="15" cols="40" class="form-font"></textarea><br><br>
+						<button class="form-font" type="submit">Submit</button>
+					</form>
+				</article>
 
-<section class="container">
-	
-	<article class="box1">
-		<h1>Contact</h1>
-		<form>
-			<p class="form-font">Name</p>
-			<input class="contact form-font" type="text" placeholder="John Smith"><br>
-			<p class="form-font">Email</p>
-			<input class="contact form-font" type="email" placeholder="example@gmail.com"><br>
-			<p class="form-font">Message</p>
-			<textarea rows="15" cols="40" class="form-font"></textarea><br><br>
-			<button class="form-font" type="submit">Submit</button>
-		</form>
-		
-		
-	</article>
+				<aside class="box2">
+					<h1>Connect with Me</h1>
+					<hr>
+					<a href="https://github.com/akspellm" target="blank"><img src="assets/images/github.png" alt="github" class="icon"></a>
 
-	<aside class="box2">
-		<h1>Connect with Me</h1>
-		<hr>
-		<a href="#"><img src="assets/images/github.png" alt="github" class="icon"></a>
-		<a href="#"><img src="assets/images/stackoverflow.png" alt="github" class="icon"></a>
-		<a href="#"><img src="assets/images/linkedin.png" alt="github" class="icon"></a>
-	</aside>
-</section>
+					<a href="https://stackoverflow.com/users/story/8486563#" target="blank"><img src="assets/images/stackoverflow.png" alt="github" class="icon"></a>
+					
+					<a href="https://www.linkedin.com/in/ashleyspellman/" target="blank"><img src="assets/images/linkedin.png" alt="github" class="icon"></a>
+				</aside>
+			</section>
 
-<footer>
-	<p>&copy 2017 Ashley Spellman</p>
-</footer>
-
-</div>
-
-</body>
+			<footer>
+				<p>&copy 2017 Ashley Spellman</p>
+			</footer>
+		</div>
+	</body>
 </html>
