--- a/portfolio.html
+++ b/portfolio.html
@@ -1,85 +1,62 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ashley Spellman</title>
-	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
-</head>
-<body>
-
-<div class="content">
-
-<header>
-	<a href="index.html"><h1 class="headbox">
-		Ashley Spellman
-	</h1></a>
-
-	<ul class="nav">
-		<li><a href="index.html">About</a></li>
-		<li><a href="portfolio.html">Portfolio</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
+	<head>
+		<title>Ashley Spellman</title>
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
+	</head>
 	
+	<body>
 
-</header>
+		<div class="content">
 
-<section class="container">
-	
-<!-- 	<article class="box1">
-		<h1>Portfolio</h1>
-		<hr>
-		<table>
-			<tr>
-				<td><a href="#"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><!-- <span><h2>Hangman</h2></span> --><!-- </a><h2>Hangman</h2></td>
-				<td><a href="#"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"></a></td>
-			</tr>
-			<tr>
-				<td><a href="#"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"></a></td>
-				<td><a href="#"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"></a></td>
-			</tr>
-			<tr>
-				<td><a href="#"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"></a></td>
-				<td><a href="#"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a></td> -->
-		<!-- 	</tr>
+			<header>
+				<a href="index.html"><h1 class="headbox">
+					Ashley Spellman
+				</h1></a>
+				<ul class="nav">
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>	
 
+			</header>
 
-		</table>
-		
+			<section class="container">
 
-	</article> --> 
+				<div class="box1">
 
-	<div class="box1">
+					<h1>Portfolio</h1>
+					<hr>
 
-	<h1>Portfolio</h1>
-	<hr>
+					<section class="portfolio-container">
+						<a href="#" class="portfolio-pic"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><p>Hangman</p></a>
+						<a href="#" class="portfolio-pic"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"><p>RPG Game</p></a>
+						<a href="#" class="portfolio-pic"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"><p>Trivia Game</p></a>
+						<a href="#" class="portfolio-pic"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"><p>Rutgers Info Widget</p></a>
+						<a href="#" class="portfolio-pic"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"><p>Rock Paper Scissors</p></a>
+					</section>
 
-	<section class="portfolio-container">
-		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio1.jpg" alt="Portfolio Image 1" class="portfolio-pic"><p>Hangman</p></a>
-		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio2.jpg" alt="Portfolio Image 2" class="portfolio-pic"><p>RPG Game</p></a>
-		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio3.jpg" alt="Portfolio Image 3" class="portfolio-pic"><p>Trivia Game</p></a>
-		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio4.jpg" alt="Portfolio Image 4" class="portfolio-pic"><p>Rutgers Info Widget</p></a>
-		<a href="#" class="portfolio-pic"><img src="assets/images/portfolio5.jpg" alt="Portfolio Image 5" class="portfolio-pic"><p>Rock Paper Scissors</p></a>
-		<!-- <a href="#" class="portfolio-pic"><img src="assets/images/portfolio6.jpg" alt="Portfolio Image 6" class="portfolio-pic"></a> -->
-	</section>
-
-	</div>
+				</div>
 
 
-	<aside class="box2">
-		<h1>Connect with Me</h1>
-		<hr>
-		<a href="#"><img src="assets/images/github.png" alt="github" class="icon"></a>
-		<a href="#"><img src="assets/images/stackoverflow.png" alt="github" class="icon"></a>
-		<a href="#"><img src="assets/images/linkedin.png" alt="github" class="icon"></a>
-	</aside>
-</section>
+				<aside class="box2">
+					<h1>Connect with Me</h1>
+					<hr>
+					<a href="https://github.com/akspellm" target="blank"><img src="assets/images/github.png" alt="github" class="icon"></a>
 
-<footer>
-	<p>&copy 2017 Ashley Spellman</p>
-</footer>
+					<a href="https://stackoverflow.com/users/story/8486563#" target="blank"><img src="assets/images/stackoverflow.png" alt="github" class="icon"></a>
+					
+					<a href="https://www.linkedin.com/in/ashleyspellman/" target="blank"><img src="assets/images/linkedin.png" alt="github" class="icon"></a>
+				</aside>
+			</section>
 
-</div>
+			<footer>
+				<p>&copy 2017 Ashley Spellman</p>
+			</footer>
 
-</body>
+		</div>
+
+	</body>
 </html>
