--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<h1>About Me</h1>
 					<hr>
 					<img src="assets/images/me.jpg" alt="Ashley Spellman" id="profile-pic">
-					<p class="bio">I am a Retail Planner by day, aspiring web developer by night. I have an ecclectic educational background including a Bachelors in History, a Juris Doctorate, and an Associates in Merchandise Marketing. All of this amalgamates to lend me sharp analytical skills with a creatice flair, which you can see in my work. I am also a staunch animal lover (with a particular fondness for cats) and decent vegan cook.</p>
+					<p class="bio">I am a Retail Planner by day, aspiring web developer by night. I have an ecclectic educational background including a Bachelors in History, a Juris Doctor, and an Associates in Merchandise Marketing. All of this amalgamates to lend me sharp analytical skills with a creatice flair, which you can see in my work. I am also a staunch animal lover (with a particular fondness for cats) and decent vegan cook.</p>
 					
 				</article>
 
